--- a/_posts/0000-01-02-Anssi-dev.md
+++ b/_posts/0000-01-02-Anssi-dev.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Learning something! <b>Cool</b>!
 Use the left arrow to go back!
